Fix hard to read header

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ a {
 }
 a:hover, a:focus {
 	text-decoration: none;
-	color: #63c2d3; /* This is where to change theme color */
+	color: #20B2AA; /* This is where to change theme color */
 }
 ul, ol {
 	list-style: none;
@@ -73,7 +73,7 @@ hr {
 	width: 70px;
 	text-align: center;
 	position: relative;
-	background: #63c2d3;
+	background: #20B2AA;
 	margin: 0 auto;
 	margin-bottom: 30px;
 	border: 0;
@@ -119,13 +119,13 @@ hr {
 }
 .navbar-custom .nav li a:hover {
 	outline: 0;
-	color: #63c2d3;
+	color: #20B2AA;
 	background-color: transparent;
 }
 .navbar-custom .nav li a:focus, .navbar-custom .nav li a:active {
 	outline: 0;
 	background-color: transparent;
-	color: #63c2d3;
+	color: #20B2AA;
 }
 .navbar-custom .nav li.active {
 	outline: 0;
@@ -159,8 +159,8 @@ hr {
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary:active, .btn-primary.active {
 	color: #fff;
-	background-color: #63c2d3;
-	border-color: #63c2d3;
+	background-color: #20B2AA;
+	border-color: #20B2AA;
 }
 .btn-primary i.fa {
 	margin-right: 10px;
@@ -173,8 +173,6 @@ hr {
 	padding: 100px 0;
 	text-align: center;
 	color: #fff;
-	background: url(../img/background.gif) no-repeat center top;
-	background-color: #63c2d3;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
@@ -204,7 +202,7 @@ hr {
 /* Skills Section */
 #skills {
 	padding: 100px 0;
-	background: #63c2d3;
+	background: #20B2AA;
 }
 #skills h2 {
 	color: #fff;
@@ -273,7 +271,7 @@ ol.type li {
 	margin-left: 20px;
 }
 ol.type li a {
-	background: #63c2d3;
+	background: #20B2AA;
 	color: #fff;
 	padding: 6px 14px;
 }
@@ -419,7 +417,7 @@ ol.type li a:hover {
 /* Achivements Section */
 #achievements {
 	padding: 100px 0;
-	background: #63c2d3;
+	background: #20B2AA;
 }
 #achievements h2 {
 	color: #fff;
@@ -499,10 +497,11 @@ ol.type li a:hover {
 	width: 70px;
 	height: 70px;
 	margin-left: 0;
-	border: 1px solid #eee;
+	border: 2px solid #eee;
+    border-color: #000000;
 	border-radius: 100%;
 	text-align: center;
-	background: #63c2d3;
+	background: #20B2AA;
 }
 .timeline>li .timeline-image h4 {
 	margin-top: 20px;
@@ -549,7 +548,7 @@ ol.type li a:hover {
 #contact {
 	padding: 100px 0 40px 0;
 	color: #121d1f;
-	background: #63c2d3;
+	background: #20B2AA;
 }
 #contact h2 {
 	color: #fff;
@@ -666,7 +665,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	color: #a0a5a5;
 }
 #footer a:hover {
-	color: #63c2d3;
+	color: #20B2AA;
 }
 
 /* Media Queries */
